# blackbox

./: index.html  package-lock.json  package.json
src/: App.tsx  database.ts  folders-repo.ts  notes-repo.ts  settings-repo.ts  settings-store.ts  styles.css  webdav-sync.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  mig.rs  webdav.rs
src/components/: FixedToolbar.css  FixedToolbar.tsx  FolderTree.css  FolderTree.tsx  JsonFormatter.css  JsonFormatter.tsx  Notes.css  Notes.tsx  RichEditor.tsx  Settings.css  Settings.tsx  Tools.css  Tools.tsx
src/components/tools/: AesTool.tsx  Base64Tool.tsx  DiffTool.css  DiffTool.tsx  HashTool.tsx  HexTool.tsx  HmacTool.tsx  ToolStyles.css  UnicodeTool.tsx  UrlTool.tsx  md5.ts
src/hooks/: useToolCopy.ts  useToolState.ts
src/utils/: bytes.ts
